--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5",
+    "lodash": "^4.17.4",
     "playfab-sdk": "^1.6.170530",
     "request": "^2.81.0"
   },
